TestSuite/errors/err0089.pas
type TClass = class
procedure Test; abstract;static;
end;

var t : TClass;

begin
end.